app/deploy/manifests/birthday-app.Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: birthday-app
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: '8081'
    prometheus.io/scrape: 'true'
  name: birthday-app
  namespace: revolut
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 8081
    protocol: TCP
    targetPort: metrics
  selector:
    app: birthday-app
